Put finishing touches on contact form validation. Worked on Portfloio overlays and open/closing functionality.

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                         <span>Landing page name 1</span>                  
                                     </div>
                                     <div class="portfolio_type"></div>                    
-                                    <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                                    <a href="" data-toggle="modal" data-name="Landing page name 1" data-target="#portfolio_modal" title=""></a>
                             </div>
                             <div class="cols_25 all" data-category="microsite">                           
                                 <div class="portfolio_parent">
@@ -256,7 +256,7 @@
                                         <span>Microsite name 1</span>                  
                                     </div>
                                     <div class="portfolio_type"></div>
-                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                                <a href="" data-toggle="modal" data-name="Microsite name 1" data-target="#portfolio_modal" title=""></a>
                             </div>
                             <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
@@ -266,7 +266,7 @@
                                         <span>Landing Page name 2</span>                  
                                     </div>
                                     <div class="portfolio_type"></div>
-                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                                <a href="" data-toggle="modal" data-name="Landing page name 2" data-target="#portfolio_modal" title=""></a>
                             </div>
                             <div class="cols_25 all" data-category="email">                           
                                 <div class="portfolio_parent">
@@ -276,7 +276,7 @@
                                         <span>Email 1</span>                  
                                     </div>
                                     <div class="portfolio_type"></div>
-                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                                <a href="" data-toggle="modal" data-name="Email 1" data-target="#portfolio_modal" title=""></a>
                             </div>
                             <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
@@ -286,7 +286,7 @@
                                         <span>Landing page name 3</span>                  
                                     </div>
                                     <div class="portfolio_type"></div>
-                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                                <a href="" data-toggle="modal" data-name="Landing page name 3" data-target="#portfolio_modal" title=""></a>
                             </div>
                             <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
@@ -296,7 +296,7 @@
                                         <span>Landing page name 4</span>                  
                                     </div>
                                     <div class="portfolio_type"></div>                    
-                                    <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                                    <a href="" data-toggle="modal" data-name="Landing page name 4" data-target="#portfolio_modal" title=""></a>
                             </div>
                             <div class="cols_25 all" data-category="microsite">                           
                                 <div class="portfolio_parent">
@@ -306,7 +306,7 @@
                                         <span>Microsite name 2</span>                  
                                     </div>
                                     <div class="portfolio_type"></div>
-                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                                <a href="" data-toggle="modal" data-name="Microsite name 2" data-target="#portfolio_modal" title=""></a>
                             </div>
                             <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
@@ -316,7 +316,7 @@
                                         <span>Landing Page name 5</span>                  
                                     </div>
                                     <div class="portfolio_type"></div>
-                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                                <a href="" data-toggle="modal" data-name="Landing page name 5" data-target="#portfolio_modal" title=""></a>
                             </div>
                             <div class="cols_25 all" data-category="email">                           
                                 <div class="portfolio_parent">
@@ -326,7 +326,7 @@
                                         <span>Email 2</span>                  
                                     </div>
                                     <div class="portfolio_type"></div>
-                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                                <a href="" data-toggle="modal" data-name="Email 2" data-target="#portfolio_modal" title=""></a>
                             </div>
             				<div class="cols_25 all" data-category="landing_page">        					
         						<div class="portfolio_parent">
@@ -336,7 +336,7 @@
                                         <span>Landing page name 6</span>                  
                                     </div>
             						<div class="portfolio_type"></div>
-                                <a href="" data-toggle="" data-name="" data-target="" title=""></a>
+                                <a href="" data-toggle="modal" data-name="Landing page name 6" data-target="#portfolio_modal" title=""></a>
             				</div>
             			</div>
         			</div><!-- cols 100 -->
@@ -354,8 +354,8 @@
                         </div>
                     </div>
                     <div class="cols_66">
-                        <div class="row">
-                            <form action="" method="" id="bottom_form" class="" style="overflow: hidden;">
+                        <div class="row" style="position: relative;">
+                            <form action="" method="" id="bottom_form" class="">
                                 <div class="cols_50">
                                     <div class="element_wrapper">
                                         <input id="name" type="text" placeholder="Name">
@@ -374,13 +374,13 @@
                                 </div>
                                 <div class="cols_50">
                                     <input class="cta blue" type="submit" name="Send Message" id="submit" value="Send Message">
-                                </div>
-                                <div class="no_error animated fadeInUp">
-                                    <img src="images/green-check.png" alt="Thanks!">
-                                    <h2>Thank you!</h2>
-                                    <p>I will get back to you as soon as possible.</p>
-                                </div>
+                                </div>                               
                             </form>
+                            <div class="no_error animated fadeInUp">
+                                <img src="images/green-check.png" alt="Thanks!">
+                                <h2>Thank you!</h2>
+                                <p>I will get back to you as soon as possible.</p>
+                            </div>
                         </div>
                     </div>                  
                 </div>
@@ -397,7 +397,7 @@
         <div class="modal fade" id="contact_modal">
             <div class="modal_dialog modal_center">
                 <div class="modal_content">
-                    <div class="modal_body">
+                    <div class="modal_body" style="position: relative;">
                         <div class="cols_100">
                             <h1>Let&rsquo;s collaborate!</h1>
                             <p>Are you working on something? Let&rsquo;s make it happen! Drop me a letter and start your project right now! Just do it.</p>
@@ -421,17 +421,86 @@
                             </div>
                             <div class="cols_100">
                                 <input class="cta blue submit" type="submit" name="Send Message" id="submit2" value="Send Message">
-                                <a href="" class="cta grey" title="Download CSV">Close This</a>
+                                <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
                             </div>
-                            <div class="no_error animated fadeInUp" style="overflow: hidden;">
+                        </form>
+                        <div class="no_error animated fadeInUp">
                                 <img src="images/green-check.png" alt="Thanks!">
                                 <h2>Thank you!</h2>
                                 <p>I will get back to you as soon as possible.</p>
-                            </div>
-                        </form>
+                        </div>
                     </div>
                 </div>         
             </div>
+        </div>
+        <!-- portfolio modals -->
+        <div class="modal fade" id="portfolio_modal">
+            <div class="modal_dialog">
+                <div class="modal_content">
+                    <div class="modal_body" data-name="Landing page name 1">
+                        <div class="cols_100">
+                            <h2>Landing page name 1</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                            <img src="images/modal-image-1.jpg">
+                            <img src="images/modal-image-2.jpg">
+                        </div>
+                    </div>
+                    <div class="modal_body" data-name="Microsite name 1">
+                        <div class="cols_100">
+                            <h2>Microsite name 1</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                    </div>
+                    <div class="modal_body" data-name="Landing page name 2">
+                        <div class="cols_100">
+                            <h2>Landing Page name 2</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                    </div>
+                    <div class="modal_body" data-name="Email 1">
+                        <div class="cols_100">
+                            <h2>Email 1</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                    </div>
+                    <div class="modal_body" data-name="Landing page name 3">
+                        <div class="cols_100">
+                            <h2>Landiing page name 3</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                    </div>
+                    <div class="modal_body" data-name="Landing page name 4">
+                        <div class="cols_100">
+                            <h2>Landing page name 4</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                    </div>
+                    <div class="modal_body" data-name="Microsite name 2">
+                        <div class="cols_100">
+                            <h2>Microsite name 2</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                    </div>
+                    <div class="modal_body" data-name="Landing Page name 5">
+                        <div class="cols_100">
+                            <h2>Landing page name 5</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                    </div>
+                    <div class="modal_body" data-name="Email 2">
+                        <div class="cols_100">
+                            <h2>Email 2</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                    </div>
+                    <div class="modal_body" data-name="Landing page name 6">
+                        <div class="cols_100">
+                            <h2>Landing page name 6</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>    
         </div>
         
         
