worked on responsiveness of page updated gitignore

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
     <body>    
         <header>
         	<div class="content_wrapper">
-        		<ul id="topnav">
+        		<div id="hamburger">
+                    <div class="line-1"></div>
+                    <div class="line-2"></div>
+                    <div class="line-3"></div>
+                </div>
+                <ul id="topnav">
         			<li id="hello"><span class="cool-link">Hello</span></li>
         			<li id="skills"><span class="cool-link">Skills</span></li>
         			<li id="experience"><span class="cool-link">Experience</span></li>
