--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         <section id="my_hello" class="section">
         	<div class="content_wrapper">
         		<div class="row">
+                    <div class="cols_50 about_me_image">
+                        <div class="hello_image_holder">
+                            <img src="images/large-fpo.jpg" alt="Hello welcome!">
+                        </div>
+                    </div>
 	        		<div class="cols_50 about_me_content">
 	        			<h1>Gerry Bunker</h1>
 	        			<div class="about_me_text">
@@ -92,11 +97,6 @@
 	        				<a href="" class="cta grey" title="Download CSV">Download CSV</a>
 	        			</div>        		
 	        		</div>
-	        		<div class="cols_50 about_me_image">
-	        			<div class="hello_image_holder">
-	        				<img src="images/large-fpo.jpg" alt="Hello welcome!">
-	        			</div>
-	        		</div>
 	        	</div><!--end row -->
         	</div><!--end content wrapper -->
         </section>
@@ -104,6 +104,7 @@
         <section id="my_skills" class="section">
         	<div class="content_wrapper">
         		<div class="row">
+                    <img class="zig_zag" src="images/zig-zag.png">
 	        		<div class="cols_33">
 	        			<div class="section_sidebar">
 	        				<h2>Skills</h2>
@@ -114,6 +115,7 @@
         				<div class="cols_50">
         					<h4>Web Development</h4>
         					<p>Javascript, Coffeescript, JAVA, Python, PHP, Go, Node.js, MongoDB, Redis, PostgreSQL, WebStorm.</p>
+                            <hr class="mobile_hr">
         				</div>
         				<div class="cols_50">
         					<h4>UI/UX Tools and Design</h4>
@@ -137,6 +139,7 @@
         <section id="my_experience" class="section">
         	<div class="content_wrapper">
         		<div class="row">
+                    <img class="zig_zag" src="images/zig-zag.png">
 	        		<div class="cols_33">
 	        			<div class="section_sidebar">
 	        				<h2>Experience</h2>
@@ -147,49 +150,49 @@
 	        			<div class="experience_row">
 	        				<h4 class="job_title">Senior Web Developer</h4>
 	        				<p class="company_name">Craft WW Boston</p>
-	        				<p>July, 2016 - March, 2018</p>
+	        				<p class="clear">July, 2016 - March, 2018</p>
 	        				<p class="job_description">Designed and developed user-friendly website, including optimized check-out page that increased user clicks, and subsequently customer purchases by 20%.</p>
 	        				<hr>
 	        			</div>
 	        			<div class="experience_row">
 	        				<h4 class="job_title">Web Developer</h4>
 	        				<p class="company_name">Staples</p>
-	        				<p></p>
+	        				<p class="clear"></p>
 	        				<p class="job_description">Designed and developed user-friendly website, including optimized check-out page that increased user clicks, and subsequently customer purchases by 20%.</p>
 	        				<hr>
 	        			</div>
 	        			<div class="experience_row">
 	        				<h4 class="job_title">Web Developer <span>Contract Position</span></h4>
 	        				<p class="company_name">Staples</p>
-	        				<p></p>
+	        				<p class="clear"></p>
 	        				<p class="job_description">Designed and developed user-friendly website, including optimized check-out page that increased user clicks, and subsequently customer purchases by 20%.</p>
 	        				<hr>
 	        			</div>
 	        			<div class="experience_row">
 	        				<h4 class="job_title">Principle/Owner</h4>
 	        				<p class="company_name">Robozone</p>
-	        					<p></p>
+	        				<p class="clear"></p>
 	        				<p class="job_description">Designed and developed user-friendly website, including optimized check-out page that increased user clicks, and subsequently customer purchases by 20%.</p>
 	        				<hr>
 	        			</div>
 	        			<div class="experience_row">
 	        				<h4 class="job_title">Principle/Owner</h4>
 	        				<p class="company_name">Mechaworx</p>
-	        				<p></p>
+	        				<p class="clear"></p>
 	        				<p class="job_description"></p>
 	        				<hr>
 	        			</div>
 	        			<div class="experience_row">
 	        				<h4 class="job_title">Marketing and Management Coordinator</h4>
 	        				<p class="company_name">Workplace Personnel Management</p>
-	        				<p></p>
+	        				<p class="clear"></p>
 	        				<p class="job_description"></p>
 	        				<hr>
 	        			</div>
 	        			<div class="experience_row">
 	        				<h4 class="job_title"></h4>
 	        				<p class="company_name"></p>
-	        				<p></p>
+	        				<p class="clear"></p>
 	        				<p class="job_description"></p>
 	        				<hr>
 	        			</div>
@@ -201,6 +204,7 @@
         <section id="my_education" class="section">
         	<div class="content_wrapper">
         		<div class="row">
+                    <img class="zig_zag" src="images/zig-zag.png">
 	        		<div class="cols_33">
 	        			<div class="section_sidebar">
 	        				<h2>Education</h2>
@@ -230,7 +234,7 @@
         <section id="my_portfolio" class="section">
         	<div class="content_wrapper">
         		<div class="row">
-        			<div class="cols_100">
+        			<div class="cols_100 no_wrap">
         				<h2>Portfolio</h2>
         				<ul id="filter_list">
         					<li data-filter="all" class="active all"><span class="cool-link">All Projects</span></li>
@@ -245,7 +249,7 @@
         				<div class="row">
                             <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
-                                    <div class="portfolio_img"></div>
+                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
                                  </div>
                                     <div class="portfolio_name">
                                         <span>Landing page name 1</span>                  
@@ -255,7 +259,7 @@
                             </div>
                             <div class="cols_25 all" data-category="microsite">                           
                                 <div class="portfolio_parent">
-                                    <div class="portfolio_img"></div>
+                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
                                 </div>
                                     <div class="portfolio_name">
                                         <span>Microsite name 1</span>                  
@@ -265,7 +269,7 @@
                             </div>
                             <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
-                                    <div class="portfolio_img"></div>
+                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
                                 </div>
                                     <div class="portfolio_name">
                                         <span>Landing Page name 2</span>                  
@@ -275,7 +279,7 @@
                             </div>
                             <div class="cols_25 all" data-category="email">                           
                                 <div class="portfolio_parent">
-                                    <div class="portfolio_img"></div>
+                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
                                 </div>
                                     <div class="portfolio_name">
                                         <span>Email 1</span>                  
@@ -285,7 +289,7 @@
                             </div>
                             <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
-                                    <div class="portfolio_img"></div>
+                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
                                 </div>
                                     <div class="portfolio_name">
                                         <span>Landing page name 3</span>                  
@@ -295,7 +299,7 @@
                             </div>
                             <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
-                                    <div class="portfolio_img"></div>
+                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
                                  </div>
                                     <div class="portfolio_name">
                                         <span>Landing page name 4</span>                  
@@ -305,7 +309,7 @@
                             </div>
                             <div class="cols_25 all" data-category="microsite">                           
                                 <div class="portfolio_parent">
-                                    <div class="portfolio_img"></div>
+                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
                                 </div>
                                     <div class="portfolio_name">
                                         <span>Microsite name 2</span>                  
@@ -315,17 +319,17 @@
                             </div>
                             <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
-                                    <div class="portfolio_img"></div>
+                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
                                 </div>
                                     <div class="portfolio_name">
                                         <span>Landing Page name 5</span>                  
                                     </div>
                                     <div class="portfolio_type"></div>
-                                <a href="" data-toggle="modal" data-name="Landing page name 5" data-target="#portfolio_modal" title=""></a>
+                                <a href="" data-toggle="modal" data-name="Landing Page name 5" data-target="#portfolio_modal" title=""></a>
                             </div>
                             <div class="cols_25 all" data-category="email">                           
                                 <div class="portfolio_parent">
-                                    <div class="portfolio_img"></div>
+                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
                                 </div>
                                     <div class="portfolio_name">
                                         <span>Email 2</span>                  
@@ -335,7 +339,7 @@
                             </div>
             				<div class="cols_25 all" data-category="landing_page">        					
         						<div class="portfolio_parent">
-                                    <div class="portfolio_img"></div>
+                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
                                 </div>
             						<div class="portfolio_name">
                                         <span>Landing page name 6</span>                  
@@ -433,6 +437,7 @@
                                 <img src="images/green-check.png" alt="Thanks!">
                                 <h2>Thank you!</h2>
                                 <p>I will get back to you as soon as possible.</p>
+                                <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
                         </div>
                     </div>
                 </div>         
@@ -449,11 +454,19 @@
                             <img src="images/modal-image-1.jpg">
                             <img src="images/modal-image-2.jpg">
                         </div>
+                        <div class="cols_100">
+                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
+                        </div>
                     </div>
                     <div class="modal_body" data-name="Microsite name 1">
                         <div class="cols_100">
                             <h2>Microsite name 1</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                        <div class="cols_100">
+                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
                         </div>
                     </div>
                     <div class="modal_body" data-name="Landing page name 2">
@@ -461,11 +474,19 @@
                             <h2>Landing Page name 2</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
                         </div>
+                        <div class="cols_100">
+                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
+                        </div>
                     </div>
                     <div class="modal_body" data-name="Email 1">
                         <div class="cols_100">
                             <h2>Email 1</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                        <div class="cols_100">
+                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
                         </div>
                     </div>
                     <div class="modal_body" data-name="Landing page name 3">
@@ -473,11 +494,19 @@
                             <h2>Landiing page name 3</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
                         </div>
+                        <div class="cols_100">
+                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
+                        </div>
                     </div>
                     <div class="modal_body" data-name="Landing page name 4">
                         <div class="cols_100">
                             <h2>Landing page name 4</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                        <div class="cols_100">
+                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
                         </div>
                     </div>
                     <div class="modal_body" data-name="Microsite name 2">
@@ -485,11 +514,19 @@
                             <h2>Microsite name 2</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
                         </div>
+                        <div class="cols_100">
+                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
+                        </div>
                     </div>
                     <div class="modal_body" data-name="Landing Page name 5">
                         <div class="cols_100">
                             <h2>Landing page name 5</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                        <div class="cols_100">
+                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
                         </div>
                     </div>
                     <div class="modal_body" data-name="Email 2">
@@ -497,11 +534,19 @@
                             <h2>Email 2</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
                         </div>
+                        <div class="cols_100">
+                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
+                        </div>
                     </div>
                     <div class="modal_body" data-name="Landing page name 6">
                         <div class="cols_100">
                             <h2>Landing page name 6</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                        </div>
+                        <div class="cols_100">
+                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="" class="cta grey close_me" title="Download CSV">Close This</a>
                         </div>
                     </div>
                 </div>
