added about us to portfolio and a few other projects

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	        			</div>
 	        			<div class="about_me_btns">
 	        				<a href="" class="cta blue" title="Contact Me" data-toggle="modal" data-target="#contact_modal">Contact Me</a>
-	        				<a href="" class="cta grey" title="Download CSV">Download CSV</a>
+	        				<a href="" class="cta grey" title="Download CSV">Download CV</a>
 	        			</div>        		
 	        		</div>
 	        	</div><!--end row -->
@@ -247,7 +247,7 @@
                                         <h4>Service Plans Microsite</h4>                  
                                     </div>
                                     <div class="portfolio_type">
-                                        <p><b>Business Unit</b>: <i>Staples</i></p>
+                                        <p><b>Business Unit</b>: <i>Staples<sup class="super">&reg;</sup></i></p>
                                         <p><b>Type</b>: <i>Responsive</i></p>
                                     </div>                    
                                     <a href="" data-toggle="modal" data-name="Service Plans Microsite" data-target="#portfolio_modal" title=""></a>
@@ -260,7 +260,7 @@
                                         <h4>Coupon Corner</h4>                  
                                     </div>
                                     <div class="portfolio_type">
-                                        <p><b>Business Unit</b>: <i>Staples</i></p>
+                                        <p><b>Business Unit</b>: <i>Staples<sup class="super">&reg;</sup></i></p>
                                         <p><b>Type</b>: <i>Responsive</i></p>
                                     </div>
                                 <a href="" data-toggle="modal" data-name="Coupon Corner" data-target="#portfolio_modal" title=""></a>
@@ -273,7 +273,7 @@
                                         <h4>Furniture Services</h4>                  
                                     </div>
                                     <div class="portfolio_type">
-                                        <p><b>Business Unit</b>: <i>Staples</i></p>
+                                        <p><b>Business Unit</b>: <i>Staples<sup class="super">&reg;</sup></i></p>
                                         <p><b>Type</b>: <i>Responsive</i></p>
                                     </div>
                                 <a href="" data-toggle="modal" data-name="Furniture Services" data-target="#portfolio_modal" title=""></a>
@@ -286,7 +286,7 @@
                                         <h4>Personal/Business Computers</h4>                  
                                     </div>
                                     <div class="portfolio_type">
-                                        <p><b>Business Unit</b>: <i>Staples</i></p>
+                                        <p><b>Business Unit</b>: <i>Staples<sup class="super">&reg;</sup></i></p>
                                         <p><b>Type</b>: <i>Adaptive</i></p>
                                     </div>
                                 <a href="" data-toggle="modal" data-name="Personal/Business Computers" data-target="#portfolio_modal" title=""></a>
@@ -299,7 +299,7 @@
                                         <h4>Intuit Microsite</h4>                  
                                     </div>
                                     <div class="portfolio_type">
-                                        <p><b>Business Unit</b>: <i>Staples</i></p>
+                                        <p><b>Business Unit</b>: <i>Staples<sup class="super">&reg;</sup></i></p>
                                         <p><b>Type</b>: <i>Adaptive</i></p>
                                     </div>
                                 <a href="" data-toggle="modal" data-name="Intuit" data-target="#portfolio_modal" title=""></a>
@@ -312,7 +312,7 @@
                                         <h4>Business Supplies</h4>                  
                                     </div>
                                     <div class="portfolio_type">
-                                        <p><b>Business Unit</b>: <i>Staples</i></p>
+                                        <p><b>Business Unit</b>: <i>Staples<sup class="super">&reg;</sup></i></p>
                                         <p><b>Type</b>: <i>Adaptive</i></p>
                                     </div>                    
                                     <a href="" data-toggle="modal" data-name="Business Supplies" data-target="#portfolio_modal" title=""></a>
@@ -343,32 +343,45 @@
                                     </div>
                                 <a href="" data-toggle="modal" data-name="Personas Landing Page" data-target="#portfolio_modal" title=""></a>
                             </div>
-                            <div class="cols_25 all" data-category="email">                           
+                            <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
-                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
+                                    <div class="portfolio_img"><img src="images/overall-program-thumb.jpg"></div>
                                 </div>
                                     <div class="portfolio_name">
-                                        <h4>Email 2</h4>                  
+                                        <h4>Overall Program</h4>                  
                                     </div>
                                     <div class="portfolio_type">
-                                        <p><b>Business Unit</b>: <i>Staples</i></p>
+                                        <p><b>Business Unit</b>: <i>Staples Business Advantage</i></p>
                                         <p><b>Type</b>: <i>Responsive</i></p>
                                     </div>
-                                <a href="" data-toggle="modal" data-name="Email 2" data-target="#portfolio_modal" title=""></a>
+                                <a href="" data-toggle="modal" data-name="Overall Program" data-target="#portfolio_modal" title=""></a>
                             </div>
-            				<div class="cols_25 all" data-category="landing_page">        					
+            				<div class="cols_25 all" data-category="microsite">        					
         						<div class="portfolio_parent">
-                                    <div class="portfolio_img"><img src="images/small-fpo.jpg"></div>
+                                    <div class="portfolio_img"><img src="images/easy-button-thumb.jpg"></div>
                                 </div>
             						<div class="portfolio_name">
-                                        <h4>Landing page name 6</h4>                  
+                                        <h4>Next Gen Easy Button</h4>                  
                                     </div>
             						<div class="portfolio_type">
-                                        <p><b>Business Unit</b>: <i>Staples</i></p>
+                                        <p><b>Business Unit</b>: <i>Staples<sup class="super">&reg;</sup></i></p>
                                         <p><b>Type</b>: <i>Responsive</i></p>                  
                                     </div>
-                                <a href="" data-toggle="modal" data-name="Landing page name 6" data-target="#portfolio_modal" title=""></a>
+                                <a href="" data-toggle="modal" data-name="Next Gen Easy Button" data-target="#portfolio_modal" title=""></a>
             				</div>
+                            <div class="cols_25 all" data-category="microsite">                         
+                                <div class="portfolio_parent">
+                                    <div class="portfolio_img"><img src="images/about-us-thumb.jpg"></div>
+                                </div>
+                                    <div class="portfolio_name">
+                                        <h4>Staples' About Us</h4>                  
+                                    </div>
+                                    <div class="portfolio_type">
+                                        <p><b>Business Unit</b>: <i>Staples<sup class="super">&reg;</sup></i></p>
+                                        <p><b>Type</b>: <i>Responsive</i></p>                  
+                                    </div>
+                                <a href="" data-toggle="modal" data-name="About Us" data-target="#portfolio_modal" title=""></a>
+                            </div>
             			</div>
         			</div><!-- cols 100 -->
         		</div><!--end row -->
@@ -565,23 +578,39 @@
                             <a href="" class="cta grey close_me" title="Close This">Close This</a>
                         </div>
                     </div>
-                    <div class="modal_body" data-name="Email 2">
+                    <div class="modal_body" data-name="Overall Program">
                         <div class="cols_100">
-                            <h2>Email 2</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                            <h2>Overall Program</h2>
+                            <p>This page was developed to help familiarize new Staples Business Advantage members' with the membership program. It uses the Vidyard Video Player API to deliver video. This page is particularly interesting because I developed it to so that when the user hits "Watch Video" trigger, the video slides into view and begins playing and the page scrolls into focus for the video. If the window width is less than 640 pixels, and should the user scroll and the video is no longer in the viewport, the video pauses. Should the user scroll the video back into the viewport the video begins to play again.</p>
+                            <p><b>STACK:</b> HTML5, SASS, CSS3, Transitions, Javascript, JQuery, Bootstrap, Vidyard API</p>
+                            <img src="projects/overall-program/images/overall-program-modal.jpg">
                         </div>
                         <div class="cols_100">
-                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="projects/overall-program/" class="cta blue" title="Visit Page">Visit Page</a>
                             <a href="" class="cta grey close_me" title="Close This">Close This</a>
                         </div>
                     </div>
-                    <div class="modal_body" data-name="Landing page name 6">
+                    <div class="modal_body" data-name="Next Gen Easy Button">
                         <div class="cols_100">
-                            <h2>Landing page name 6</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam aliquet, tortor eget volutpat luctus, sapien magna auctor nisl, id fringilla augue nisl et risus. Vivamus aliquam lectus posuere, varius leo vitae, consectetur augue. Ut tempor ut turpis ac rutrum.</p>
+                            <h2>Next Gen Easy Button</h2>
+                            <p>The Next Generation Easy Button project was a beta program that a focused group of Staples' best clients were invited to try. It was an AI program based off of IBM's Watson AI and similar to Amazon's Alexa. This microsite was developed to familiarize thosee participating in the program.</p>
+                            <p><b>STACK:</b> HTML5, SASS, CSS3, Transitions, Javascript, JQuery, Bootstrap, Vidyard API</p>
+                            <img src="projects/easy=button=v2/images/easy=button-modal.jpg">
                         </div>
                         <div class="cols_100">
-                            <a href="" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="https://www.staplesadvantage.com/sites/easy-button/index.html" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="" class="cta grey close_me" title="Close This">Close This</a>
+                        </div>
+                    </div>
+                     <div class="modal_body" data-name="About Us">
+                        <div class="cols_100">
+                            <h2>Staples' About Us</h2>
+                            <p></p>
+                            <p><b>STACK:</b> HTML5, SASS, CSS3, Transitions, Javascript, JQuery, JQuery Bxslider</p>
+                            <img src="projects/about-us/images/about-us-modal.jpg">
+                        </div>
+                        <div class="cols_100">
+                            <a href="projects/about-us/" class="cta blue" title="Visit Page">Visit Page</a>
                             <a href="" class="cta grey close_me" title="Close This">Close This</a>
                         </div>
                     </div>
