added a scrolling skill bar to skills section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css" type="text/css">
         <link rel="stylesheet" href="css/responsive.css" type="text/css">
-
         
     </head>
 
@@ -68,7 +67,7 @@
 	        		<div class="cols_50 about_me_content">
 	        			<h1>Gerry Bunker</h1>
 	        			<div class="about_me_text">
-	        				<p>With close to 20 years of working knowledge in the digital space, I have managed to learn great skills and accrued invaluable experience. Currently seeking opportunities of Digital Marketing Coordinator, SEO Optimization, Digital Project Manager, Web Content Producer, Web Content Specialist, Digital Content Coordinator</p>
+	        				<p>With close to 20 years of working knowledge as a web developer, I have managed to learn great skills and accrue invaluable experience. I'm currently seeking opportunities of Digital Marketing Coordinator, SEO Optimization, Digital Project Manager, Web Content Producer, Web Content Specialist, Digital Content Coordinator</p>
 	        			</div>
 						<div class="about_me_info">
 		        			<p>
@@ -104,11 +103,32 @@
         <section id="my_skills" class="section">
         	<div class="content_wrapper">
         		<div class="row">
-                    <img class="zig_zag" src="images/zig-zag.png">
+                    
 	        		<div class="cols_33">
 	        			<div class="section_sidebar">
 	        				<h2>Skills</h2>
 	        				<p>I am inspired by creating great work with people who are as passionate as I am about building something awesome.</p>
+                            <div id="cwwbos_graph">
+                                <div class="cwwbos_graph_content">
+                                    <h3><span class="count" data-count="54">0%</span> Web Development</h3>
+                                         <div class="skillbar clearfix" data-percent="54%">
+                                            <div class="skillbar-bar"></div>
+                                        </div> <!-- End Skill Bar -->
+                                    <h3><span class="count" data-count="69">0%</span> Front End Development</h3>
+                                        <div class="skillbar clearfix" data-percent="69%">
+                                            <div class="skillbar-bar"></div>
+                                        </div> <!-- End Skill Bar -->
+                                    <h3><span class="count" data-count="56">0%</span> UI/UX Tools and Design</h3>
+                                        <div class="skillbar clearfix" data-percent="56%">
+                                            <div class="skillbar-bar"></div>
+                                        </div> <!-- End Skill Bar -->
+                                    <h3><span class="count" data-count="56">0%</span> Project Management</h3>
+                                        <div class="skillbar clearfix" data-percent="56%">
+                                            <div class="skillbar-bar"></div>
+                                        </div> <!-- End Skill Bar -->
+                                </div>
+                            </div>
+                            <div id="animation_trigger" style="height: 2px;"></div>
 	        			</div>
 	        		</div>
         			<div class="cols_66">
@@ -132,6 +152,7 @@
         					<p>Screaming Frog, Woorank, Raventools, Semrush, Moz, WebCEO, Google Analytics, ChartBeat, CrazyEgg.</p>
         				</div>	
         			</div>
+                    <img class="zig_zag" src="images/zig-zag.png">
         		</div>
         	</div><!-- end content wrapper -->
         </section>
@@ -301,11 +322,32 @@
                             <hr>
                         </div>
 	        			<div class="experience_row">
-	        				<h4 class="title">Principle/Owner</h4>
-	        				<p class="company_name">Mechaworx</p>
-	        				<p class="clear"></p>
-	        				<p class="description">Designed and developed user-friendly website, including optimized check-out page that increased user clicks, and subsequently customer purchases by 20%.</p>
-	        				<hr>
+	        				<h4 class="title">Independent Consultant, Service Engineer</h4>
+	        				<p class="company_name">Oxford Instruments</p>
+	        				<p class="clear">1988 - 2000</p>
+	        				<p class="description">A Sales and Service Company of Nuclear Magnetic Resonance (NMR), Magnetic Resonance Imaging (MRI) magnets and other scientific instrumentation.  During my twelve-year tenure I was promoted from a Service Coordinator to a Service Engineer position.</p>
+                            <div class="expandable_container">
+                                <ul class="columns">
+                                    <li>Hired and supervised contractors.</li>
+                                    <li>Trained and supervised new Service Engineers.</li>
+                                    <li>Trained customers on safety standards following OSHA guidelines.</li>
+                                    <li>Installed, calibrated and troubleshot scientific equipment for major OEM’s, pharmaceutical manufacturers, hospitals and universities in the US, Canada and Mexico.</li>
+                                    <li>Provided clients with consultative services on initial lab design layout.</li>
+                                    <li>Solved critical problems on site and within budget.</li>
+                                    <li>Consulted on site preparation prior to installation.</li>
+                                    <li>Ensured the timely arrival of all equipment and parts.</li>
+                                    <li>Handled the timely shipment of all service equipment in the US and around the world.</li>
+                                    <li>Created accounts with worldwide carriers.</li>
+                                    <li>Generated all necessary paperwork and kept accurate computer records tracking equipment locations.</li>
+                                    <li>Interfaced with customers and arranged the shipments back of all faulty scientific equipment for repair.</li>
+                                    <li>Tracked location of the equipment for repair in the warehouse and advise customers as to the status of repair. </li> 
+                                    <li>Created a database to track location of Engineers and equipment for repair worldwide.</li> 
+                                    <li>Processed service and expense reports for re-imbursement to Service Engineers.</li>  
+                                    <li>Purchased hazardous and non-hazardous materials for shipment to the United Kingdom while following strict OSHA guidelines.</li>
+                                </ul>
+                            </div>
+                            <img class="down-arrow" src="images/down-arrow.png" />
+                            <p class="show_more">Show More</p>
 	        			</div>
         			</div>        			
         		</div>
@@ -858,7 +900,7 @@
                             <img src="projects/workbar/images/workbar-modal.jpg">
                         </div>
                         <div class="cols_100">
-                            <a href=https://www.staples.com/sbd/cre/marketing/workbar/" class="cta blue" title="Visit Page">Visit Page</a>
+                            <a href="https://www.staples.com/sbd/cre/marketing/workbar/" class="cta blue" title="Visit Page">Visit Page</a>
                             <a href="" class="cta grey close_me" title="Close This">Close This</a>
                         </div>
                     </div>
