--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         			<li id="experience"><span class="cool-link">Experience</span></li>
         			<li id="education"><span class="cool-link">Education</span></li>
         			<li id="portfolio"><span class="cool-link">Portfolio</span></li>
+                    <li id="interests"><span class="cool-link">Interests</span></li>
                     <li id="contact"><span class="cool-link">Contact Me</span></li>
         		</ul>
         	</div>
@@ -65,9 +66,9 @@
                         </div>
                     </div>
 	        		<div class="cols_50 about_me_content">
-	        			<h1>Gerry Bunker</h1>
+	        			<h1>Hello. I'm Gerry Bunker</h1>
 	        			<div class="about_me_text">
-	        				<p>With close to 20 years of working knowledge as a web developer, I have managed to learn great skills and accrue invaluable experience. I'm currently seeking opportunities of Digital Marketing Coordinator, SEO Optimization, Digital Project Manager, Web Content Producer, Web Content Specialist, Digital Content Coordinator</p>
+	        				<p>I'm looking to further my horizons in the digital space. While web development would probably be at the core, there are so many other expanding markets out there on the World Wide Web. I am currently seeking opportunities in Digital Marketing, SEO Optimization, Digital Project Manager, Web Content Producer or other opportunities. I am eager to collaborate with reputable companies and individuals to bring to light your vision in the digital world.</p>
 	        			</div>
 						<div class="about_me_info">
 		        			<p>
@@ -107,23 +108,23 @@
 	        		<div class="cols_33">
 	        			<div class="section_sidebar">
 	        				<h2>Skills</h2>
-	        				<p>I am inspired by creating great work with people who are as passionate as I am about building something awesome.</p>
+	        				<p>With close to 20 years of working knowledge as a web developer, I have managed to learn great skills and accrue diverse experience. </p>
                             <div id="cwwbos_graph">
                                 <div class="cwwbos_graph_content">
-                                    <h3><span class="count" data-count="54">0%</span> Web Development</h3>
-                                         <div class="skillbar clearfix" data-percent="54%">
+                                    <h3><span class="count" data-count="70">0%</span> Web Development</h3>
+                                         <div class="skillbar clearfix" data-percent="70%">
                                             <div class="skillbar-bar"></div>
                                         </div> <!-- End Skill Bar -->
-                                    <h3><span class="count" data-count="69">0%</span> Front End Development</h3>
-                                        <div class="skillbar clearfix" data-percent="69%">
+                                    <h3><span class="count" data-count="75">0%</span> Front End Development</h3>
+                                        <div class="skillbar clearfix" data-percent="75%">
                                             <div class="skillbar-bar"></div>
                                         </div> <!-- End Skill Bar -->
-                                    <h3><span class="count" data-count="56">0%</span> UI/UX Tools and Design</h3>
-                                        <div class="skillbar clearfix" data-percent="56%">
+                                    <h3><span class="count" data-count="80">0%</span> UI/UX Tools and Design</h3>
+                                        <div class="skillbar clearfix" data-percent="80%">
                                             <div class="skillbar-bar"></div>
                                         </div> <!-- End Skill Bar -->
-                                    <h3><span class="count" data-count="56">0%</span> Project Management</h3>
-                                        <div class="skillbar clearfix" data-percent="56%">
+                                    <h3><span class="count" data-count="85">0%</span> Project Management</h3>
+                                        <div class="skillbar clearfix" data-percent="85%">
                                             <div class="skillbar-bar"></div>
                                         </div> <!-- End Skill Bar -->
                                 </div>
@@ -134,12 +135,12 @@
         			<div class="cols_66">
         				<div class="cols_50">
         					<h4>Web Development</h4>
-        					<p>Javascript, JQuery, PHP, MySQL, WAMP, MAMP, PHP MyAdmin.</p>
+        					<p>Javascript, jQuery, PHP, MySQL, WAMP, MAMP, PHP MyAdmin.</p>
                             <hr class="mobile_hr">
         				</div>
         				<div class="cols_50">
         					<h4>UI/UX Development Tools and Design</h4>
-        					<p>Photoshop, Illustrator, Sketch, Prototyping, Wireframing, User Research, Usability Testing, Dreamweaver, Coda, Sublime, Brackets.</p>
+        					<p>Photoshop, Illustrator, Sketch, Prototyping, Wireframing, User Research, Usability Testing, Dreamweaver, Coda, Sublime, Brackets, Zencoder, Litmus, Email On Acid.</p>
         				</div>
         				<div class="cols_50">
         					<hr>
@@ -164,7 +165,7 @@
 	        		<div class="cols_33">
 	        			<div class="section_sidebar">
 	        				<h2>Experience</h2>
-	        				<p>With close to 20 years of working knowledge in the digital space, I have managed to learn great skills and accrued invaluable experience. Currently seeking opportunities of Digital Marketing, SEO Optimization, Digital Project Manager, Web Content Producer</p>
+	        				<p>My involvement in the digital arena has afforded me a broad range of skills and competancies that have proven to be advantageous to my employers and co-workers.</p>
 	        			</div>
 	        		</div>
         			<div class="cols_66">
@@ -361,7 +362,7 @@
 	        		<div class="cols_33">
 	        			<div class="section_sidebar">
 	        				<h2>Education</h2>
-	        				<p>All my life I have been driven by my strong belief that education is important. I try to learn something new every single day.</p>
+	        				<p>I'm a life-long learner with a natural curiosity in a broad range of subjects, from Entomology, Video Production, Photography and Computer Science.</p>
 	        			</div>
 	        		</div>
         			<div class="cols_66">
@@ -639,6 +640,38 @@
         		</div><!--end row -->
         	</div><!-- end content wrapper -->
         </section>
+
+        <section id="my_interests" class="section">
+            <div class="content_wrapper">
+                <div class="row">
+                    <img class="zig_zag" src="images/zig-zag.png">
+                    <div class="cols_33">
+                        <div class="section_sidebar">
+                            <h2>Interests</h2>
+                            <p>Some text about my Entomology Stuff</p>
+                        </div>
+                    </div>
+                    <div class="cols_66">
+                        <div class="experience_row">
+                            <h4 class="title">List of Publication</h4>
+                            <p class="company_name">Google</p>
+                            <p>July, 2016 - March, 2018</p>
+                            <p class="description">Learn to use App Engine, Google's Platform as a Service, to build the backend for web apps that scale not only as your user base grows but as request volumes peaks with sudden demand.</p>
+                            <hr>
+                        </div>
+                        <div class="experience_row">
+                            <h4 class="title">Website information</h4>
+                            <p class="company_name">Boston University</p>
+                            <p>Jan, 2006 - May, 2009</p>
+                            <p class="description">BSc (Hons) in Software Development. Outstanding Academic Achievement Award.</p>
+                            <hr>
+                        </div>
+                    </div>                  
+                </div>
+            </div><!-- end content wrapper -->
+        </section>
+
+
 
          <section id="my_contact" class="section">
             <div class="content_wrapper">
